added metadata, minor fixes
